--- a/src/app/hr/hr.component.html
+++ b/src/app/hr/hr.component.html
@@ -1,1 +1,4 @@
 <p>hr works!</p>
+<i class="fa fa-american-sign-language-interpreting fa-2x" aria-hidden="true"></i>
+<br>
+<fa-icon [icon]="faCoffee"></fa-icon>
