confirmation dialog for save, next
Signed-off-by: impressiveHen <b02505002@gmail.com>

--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,7 @@
 <p>employee works!</p>
+
+<fa-icon [icon]="faCoffee"></fa-icon>
+<br>
+
+<button class="btn btn-primary" (click)="showDialog()">Show Dialog</button>
+<app-confirm-dialog></app-confirm-dialog>  
