--- a/src/app/hr/hr.component.html
+++ b/src/app/hr/hr.component.html
@@ -2,3 +2,6 @@
 <i class="fa fa-american-sign-language-interpreting fa-2x" aria-hidden="true"></i>
 <br>
 <fa-icon [icon]="faCoffee"></fa-icon>
+<br>
+<button class="btn btn-primary pull-right" (click)="showDialog()">Show Dialog</button>
+<app-confirm-dialog></app-confirm-dialog>  
