--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]="navbarCollapsed">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/employee/" routerLinkActive="active">Profile</a>
+                <a class="nav-item nav-link" routerLink="/employee/employee-form" routerLinkActive="active">Profile</a>
             </li>
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/employee/" routerLinkActive="active">Visa Status Management</a>
