--- a/src/app/employee/component/employee-form/employee-form.component.html
+++ b/src/app/employee/component/employee-form/employee-form.component.html
@@ -39,7 +39,7 @@
 
         <div class="form-group">
             <label>End Date</label>
-            <input type="date" class="form-control" formControlName="endDate" required>
+            <input type="date" class="form-control" formControlName="endDate">
             <div 
                 class="alert alert-danger"
                 *ngIf="employeeFormControls.endDate.invalid && employeeFormControls.endDate.touched && employeeFormControls.endDate.errors?.dateAfter"
@@ -52,6 +52,7 @@
             <label>Avatar</label>
             <input type="file" accept="image/x-png,image/gif,image/jpeg" 
                 (change)="handleFileInput($event.target.files)" class="form-control-file">
+            <span class="btn btn-outline-success my-2" (click)="uploadFile()">Upload image</span>
         </div>
     
         <div class="form-group">
@@ -93,12 +94,12 @@
 
         <div class="form-group">
             <label>Driver License</label>
-            <input type="text" class="form-control"  placeholder="Enter driver license" formControlName="driverLicense">
+            <input type="text" class="form-control" placeholder="Enter driver license" formControlName="driverLicense">
         </div>
 
         <div *ngIf="employeeFormControls.driverLicense.value" class="form-group ml-5">
             <label>Driver License Expiration Date</label>
-            <input type="date" class="form-control" formControlName="driverLicenseExpirationDate" required>
+            <input type="date" class="form-control" formControlName="driverLicenseExpirationDate" [required]="employeeFormControls.driverLicense.value">
             <div 
                 class="alert alert-danger"
                 *ngIf="employeeFormControls.driverLicenseExpirationDate.invalid && employeeFormControls.driverLicenseExpirationDate.touched && employeeFormControls.driverLicenseExpirationDate.errors?.required"
