s3 doc, image uploader components
Signed-off-by: impressiveHen <b02505002@gmail.com>

--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -5,3 +5,5 @@
 
 <button class="btn btn-primary" (click)="showDialog()">Show Dialog</button>
 <app-confirm-dialog></app-confirm-dialog>  
+
+<app-s3-doc-uploader [label]="testDocLabel" (docUploadedToS3Event)='onTestDocUploadedToS3Event($event)' ></app-s3-doc-uploader>
