--- a/src/app/employee/component/employee-form/employee-form.component.html
+++ b/src/app/employee/component/employee-form/employee-form.component.html
@@ -48,12 +48,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <label>Avatar</label>
-            <input type="file" accept="image/x-png,image/gif,image/jpeg" 
-                (change)="handleFileInput($event.target.files)" class="form-control-file">
-            <span class="btn btn-outline-success my-2" (click)="uploadFile()">Upload image</span>
-        </div>
+        <app-s3-image-uploader [label]="avatarLabel" (imageUploadedToS3Event)='onAvatarImageUploadedToS3Event($event)' ></app-s3-image-uploader>
     
         <div class="form-group">
             <label>Car</label>
