--- a/src/app/sharedcomponents/componenet/s3bucket/s3-image-uploader/s3-image-uploader.component.html
+++ b/src/app/sharedcomponents/componenet/s3bucket/s3-image-uploader/s3-image-uploader.component.html
@@ -1,4 +1,4 @@
-<div class="form-group row">
+<div class="form-group">
     <div>
         <label>{{label}}</label>
         <input type="file" accept="image/x-png,image/gif,image/jpeg"
