--- a/src/app/employee/component/contact-form/contact-form.component.html
+++ b/src/app/employee/component/contact-form/contact-form.component.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         
-        <button type="submit" class="btn btn-outline-warning" [disabled]="!contactForm.valid">Submit</button>
+        <button type="submit" class="btn btn-outline-warning" [disabled]="!contactForm.valid">next</button>
     </form>
 
 </div>
