--- a/src/app/employee/component/employee-form/employee-form.component.html
+++ b/src/app/employee/component/employee-form/employee-form.component.html
@@ -110,6 +110,6 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-outline-warning" [disabled]="!employeeForm.valid">Submit</button>
+        <button type="submit" class="btn btn-outline-warning" [disabled]="!employeeForm.valid">next</button>
     </form>
 </div>
