show application table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/hr/" routerLinkActive="active">Visa Status Management</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link" routerLink="/hr/hire" routerLinkActive="active">Hire Management</a>
+            </li>
         </ul>
     </div>
 </nav>
