add status edit page

--- a/src/app/hr/component/hire-management/hire-management.component.html
+++ b/src/app/hr/component/hire-management/hire-management.component.html
@@ -1,25 +1,41 @@
-<div class="container my-3">
+<div class="row">
+  <div class="col-xs-12 col-sm-4">
     <table class="table table-white">
       <thead>
         <tr>
           <th scope="col">id</th>
-          <th scope="col">Created Date</th>
-          <th scope="col">Modification Date</th>
           <th scope="col">Status</th>
           <th scope="col">Comments</th>
           <th scope="col">Type</th>
+          <th scope="col">Update</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let applicationWorkflow of applicationWorkflows$ | async; let pos=index;" [ngClass]="applicationWorkflow.status==='pending' ? []:['mute-text']">
           <!-- <th scope="row">{{pos+1}}</th> -->
-          <th scope="row">{{applicationWorkflow.id}}</th>
-          <td>{{applicationWorkflow.createdDate}}</td>
-          <td>{{applicationWorkflow.modificationDate}}</td>
+          <th scope="row"><a routerLink="/hr/application-detail/{{applicationWorkflow.id}}">{{applicationWorkflow.id}}</a></th>
           <td>{{applicationWorkflow.status}}</td>
           <td>{{applicationWorkflow.comments}}</td>
           <td>{{applicationWorkflow.type}}</td>
+          <td><a [routerLink]="['hire', applicationWorkflow.id]">Update</a></td>
+          
         </tr>
       </tbody>
     </table>
+
+    <!-- <div class="list-group">
+      <a
+        [routerLink]="['/hire', applicationWorkflow.id]"
+  
+        fragment="loading"
+        href="#"
+        class="list-group-item"
+        *ngFor="let applicationWorkflow of applicationWorkflows$ | async">
+        {{ applicationWorkflow.id }}. {{applicationWorkflow.type}} {{applicationWorkflow.status}}
+      </a>
+    </div>
+  </div> -->
+  <div class="col-xs-12 col-sm-4">
+    <router-outlet></router-outlet>
   </div>
+</div>
