--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]="navbarCollapsed">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/hr/" routerLinkActive="active">Employee Profiles</a>
+                <a class="nav-item nav-link" routerLink="/hr/employee-profiles" routerLinkActive="active">Employee Profiles</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/hr/" routerLinkActive="active">Visa Status Management</a>
+                <a class="nav-item nav-link" routerLink="/hr/generate-token" routerLinkActive="active">Generate Token</a>
             </li>
         </ul>
     </div>
