nav bar person model
Signed-off-by: impressiveHen <b02505002@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <nav *ngIf="role==='hr'" class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/hr">HR-HOME</a>
+    <a class="navbar-brand">HR-HOME</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" (click)="navbarCollapsed = !navbarCollapsed" [attr.aria-expanded]="!navbarCollapsed"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]="navbarCollapsed">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/hr/employee-profiles" routerLinkActive="active">Employee Profiles</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/hr/generate-token" routerLinkActive="active">Generate Token</a>
             </li>
@@ -17,7 +14,7 @@
 </nav>
 
 <nav *ngIf="role==='employee'" class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/employee">EMPLOYEE-HOME</a>
+    <a class="navbar-brand">EMPLOYEE-HOME</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" (click)="navbarCollapsed = !navbarCollapsed" [attr.aria-expanded]="!navbarCollapsed"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,10 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]="navbarCollapsed">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/employee/person-form" routerLinkActive="active">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/employee/" routerLinkActive="active">Visa Status Management</a>
+                <a class="nav-item nav-link" routerLink="/employee/visa-status-management" routerLinkActive="active">Visa Status Management</a>
             </li>
         </ul>
     </div>
