--- a/src/app/hr/hr.component.html
+++ b/src/app/hr/hr.component.html
@@ -3,5 +3,15 @@
 <br>
 <fa-icon [icon]="faCoffee"></fa-icon>
 <br>
-<button class="btn btn-primary pull-right" (click)="showDialog()">Show Dialog</button>
+<button class="btn btn-primary" (click)="showDialog()">Show Dialog</button>
+
+<hr>
+
+<app-s3-doc-downloader 
+    [title]="testTitle" 
+    [description]="testDescription" 
+    [s3FileName]="testS3FileName"
+    [s3FileUrl]="testS3FileUrl"
+></app-s3-doc-downloader>
+
 <app-confirm-dialog></app-confirm-dialog>  
