add employ profile summary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [collapse]="navbarCollapsed">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/hr/employee-profiles" routerLinkActive="active">Employee Profiles</a>
+                <a class="nav-item nav-link" routerLink="/hr/profile" routerLinkActive="active">Employee Profiles</a>
             </li>
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/hr/generate-token" routerLinkActive="active">Generate Token</a>
