modify link to employee profile page

--- a/src/app/hr/component/hire-management/update-status/update-status.component.html
+++ b/src/app/hr/component/hire-management/update-status/update-status.component.html
@@ -34,9 +34,7 @@
 
 </table>
 
-<button
-class="btn btn-primary"
-(click)="onViewDetail()">View Detail</button>
+<a [routerLink]="['/employee', applicationWorkflowRequest.userId]">View Application Detail</a>
 
 <br><br>
 
