--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,13 @@
                 <a class="nav-item nav-link" routerLink="/hr/profile" routerLinkActive="active">Employee Profiles</a>
             </li>
             <li class="nav-item">
+                <a class="nav-item nav-link" routerLink="/hr/visa-management" routerLinkActive="active">Visa Status Management</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/hr/generate-token" routerLinkActive="active">Generate Token</a>
             </li>
             <li class="nav-item">
-                <a class="nav-item nav-link" routerLink="/hr/hire" routerLinkActive="active">Hire Management</a>
+                <a class="nav-item nav-link" routerLink="/hr/hire" routerLinkActive="active">Hire</a>
             </li>
         </ul>
     </div>
