--- a/src/app/employee/component/employee-home/employee-home.component.html
+++ b/src/app/employee/component/employee-home/employee-home.component.html
@@ -1,17 +1,45 @@
 <div *ngIf="person$ | async as person">
-    
-    <div class="row" >
+    <div *ngIf="person.employee.applicationWorkflow.status!=='completed'">
+        <span>
+            Application is not complete, message from HR:
+            <hr>
+            {{person.employee.applicationWorkflow.comments}}
+        </span>
+    </div>
+
+    <div class="row">
+        <div class="col-4 my-3">
+            <app-profile-employment-section
+                [avatar]="person.employee.avatar"
+                [employeeTitle]="person.employee.title"
+                [visaType]="person.employee.visaStatus.visaType"
+                [visaStartDate]="person.employee.visaStartDate"
+                [visaEndDate]="person.employee.visaEndDate"
+                [employmentStartDate]="person.employee.startDate"
+                [employmentEndDate]="person.employee.endDate"
+            >
+            </app-profile-employment-section>
+        </div>
+
         <div class="col-4 my-3">
             <app-profile-name-section
-                [avatar]="person.employee.avatar"
                 [fullName]="person.firstName + ' ' + person.middleName + ' ' + person.lastName"
+                [email]="person.email"
+                [cellphone]="person.cellphone"
                 [gender]="person.gender"
                 [ssnFourDigits]="person.ssn.substring(0, 5)"
                 [dob]="person.dob"
             >
             </app-profile-name-section>
         </div>
-       
+
+        <div class="col-4 my-3">
+            <app-profile-document-section
+                [personalDocuments]="person.employee.personalDocuments"
+            >
+            </app-profile-document-section>
+        </div>
+
         <div class="col-4 my-3">
             <app-profile-address-section
                 [addressLineOne]="person.address.addressLineOne"
@@ -22,7 +50,7 @@
             >
             </app-profile-address-section>
         </div>
-    
+
         <div class="col-4 my-3">
             <app-profile-contactinfo-section
                 [referenceTitle]="person.contacts[0].title"
@@ -31,25 +59,6 @@
                 [emergencyRelationship]="person.contacts[1].relationship"
             >
             </app-profile-contactinfo-section>
-        </div>
-    
-        <div class="col-4 my-3">
-            <app-profile-employment-section
-                [employeeTitle]="person.employee.title"
-                [visaType]="person.employee.visaStatus.visaType"
-                [visaStartDate]="person.employee.visaStartDate"
-                [visaEndDate]="person.employee.visaEndDate"
-                [employmentStartDate]="person.employee.startDate"
-                [employmentEndDate]="person.employee.endDate"
-            >
-            </app-profile-employment-section>
-        </div>
-    
-        <div class="col-4 my-3">
-            <app-profile-document-section
-                [personalDocuments]="person.employee.personalDocuments"
-            >
-            </app-profile-document-section>
         </div>
     </div>
 </div>
