--- a/src/app/employee/component/profile-address-section/profile-address-section.component.html
+++ b/src/app/employee/component/profile-address-section/profile-address-section.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+ <div class="card">
     <div class="card-header">
         Profile Address Section
     </div>
@@ -12,6 +12,6 @@
         </ul>
     </div>
     <div class="card-footer">
-        <button type="button" class="card-link btn btn-outline-success">Edit</button>
+        <button type="button" class="card-link btn btn-outline-success" (click)="navigateAddressForm()">Edit</button>
     </div>
 </div>
