--- a/src/app/employee/component/profile-contactinfo-section/profile-contactinfo-section.component.html
+++ b/src/app/employee/component/profile-contactinfo-section/profile-contactinfo-section.component.html
@@ -15,6 +15,6 @@
         </ul>
     </div>
     <div class="card-footer">
-        <button type="button" class="card-link btn btn-outline-success">Edit</button>
+        <button type="button" class="card-link btn btn-outline-success" (click)="navigateContactForm()">Edit</button>
     </div>
 </div>
