--- a/src/app/employee/component/address-form/address-form.component.html
+++ b/src/app/employee/component/address-form/address-form.component.html
@@ -80,6 +80,12 @@
                 </div>
         </div>
 
-        <button type="submit" class="btn btn-outline-warning" [disabled]="!addressForm.valid">Next</button>
+        <div *ngIf="!returnUserId">
+            <button type="submit" class="btn btn-outline-warning" [disabled]="!addressForm.valid">Next</button>
+        </div>
+        <div *ngIf="returnUserId">
+            <button type="submit" class="btn btn-outline-warning m-1" [disabled]="!addressForm.valid">Save</button>
+            <button type="button" class="btn btn-outline-dark m-1" (click)="back()">Back</button>
+        </div>
     </form>
 </div>
