--- a/src/app/employee/component/contact-form/contact-form.component.html
+++ b/src/app/employee/component/contact-form/contact-form.component.html
@@ -50,7 +50,13 @@
             </div>
         </div>
         
-        <button type="submit" class="btn btn-outline-warning" [disabled]="!contactForm.valid">next</button>
+        <div *ngIf="!returnUserId">
+            <button type="submit" class="btn btn-outline-warning" [disabled]="!contactForm.valid">next</button>
+        </div>
+        <div *ngIf="returnUserId">
+            <button type="submit" class="btn btn-outline-warning m-1" [disabled]="!contactForm.valid">Save</button>
+            <button type="button" class="btn btn-outline-dark m-1" (click)="back()">Back</button>
+        </div>
     </form>
 
 </div>
